# UKY

CS 216 Intro to Software Engineering/final_program/: CMakeLists.txt  accounts.xml  accounts.xsd  datafactory.cpp  plans.xml  plans.xsd  resource.qrc  textfactory.h
CS 216 Intro to Software Engineering/final_program/.svn/: entries
CS 216 Intro to Software Engineering/final_program/.svn/text-base/: account.cpp.svn-base  account.h.svn-base  data.h.svn-base  plan.cpp.svn-base  planfactory.cpp.svn-base  planfactory.h.svn-base  python.py.svn-base
CS 216 Intro to Software Engineering/practicum/cmd_line/: CMakeLists.txt
CS 216 Intro to Software Engineering/practicum/factories/abstract_factory/: CMakeLists.txt  circle.cpp  circlefactory.cpp  circlefactory.h  mesh.cpp  rectangle.h  shape.h  shapefactory.cpp  shapefactory.h  squarefactory.h  triangle.cpp  triangle.h
CS 216 Intro to Software Engineering/practicum/factories/abstract_factory/.svn/text-base/: circle.h.svn-base  mesh.cpp.svn-base  mesh.qrc.svn-base  rectangle.cpp.svn-base  shapefactory.h.svn-base  square.h.svn-base  squarefactory.cpp.svn-base
CS 216 Intro to Software Engineering/practicum/mvc_qt/: CMakeLists.txt  main.cpp  namelastview.cpp  namemodel.h  nameview.cpp  nameview.h
CS 216 Intro to Software Engineering/practicum/week3/: pg35.txt  sorted.txt
CS 216 Intro to Software Engineering/practicum/week4/: GeometricSeries.h
CS 216 Intro to Software Engineering/practicum/week5/: a.opt.out  a.out  main.cpp  questions.txt  sortable.cpp  sortablebase.cpp
CS 216 Intro to Software Engineering/practicum/week6/: CMakeLists.txt
CS 216 Intro to Software Engineering/practicum/week6/libsort/: CMakeLists.txt  sortablebase.cpp
CS 216 Intro to Software Engineering/practicum/xml_qt/: address.cpp  address.h
CS 216/final_program/: CMakeCache.txt  data.cpp  datafactory.h  main.cpp  plan.h  processor.h  text.cpp  text.h  voice.h  voicefactory.h
CS 216/practicum/cmd_line/: main.cpp
CS 216/practicum/mvc_qt/: namecontroller.cpp  namecontroller.h  namefirstview.cpp  namefirstview.h  namelastview.h  namemodel.cpp
CS 216/practicum/week4/: GeometricSeries.cpp  data  main.cpp  questions.txt  series.opt.out  series.out
CS 216/practicum/week5/: sortable.h  sortablebase.h  timer.cpp  timer.h
CS 216/practicum/week6/: question.txt
CS 216/practicum/week7/: question.txt
CS 216/practicum/week8/debugging/: CMakeLists.txt  point.cpp  point.h  polygon.h  rectangle.cpp  triangle.h
CS 216/practicum/week8/debugging/.svn/: all-wcprops  entries
CS 216/practicum/week8/debugging/.svn/text-base/: main.cpp.svn-base  point.cpp.svn-base  polygon.cpp.svn-base
CS 216/practicum/xml_qt/: CMakeLists.txt  addresslist.qrc  addresslist.xsd  addressprocessor.cpp  addressprocessor.h  main.cpp
CS 315 Algorithms/hw1/: a.out  fibonacci.cpp
CS 315 Algorithms/hw2/: find_dominant.cpp
CS 315 Algorithms/hw3/: data2  data3
CS 315 Algorithms/hw5/: a.out  data  data2
CS 315/hw3/: a.out  data  read_graph.c
CS 315/hw5/: D_read_graph.c
CS 316/: CS316info.html  CS316phptest.html  CS316post.php  cs316cookie.php  deal.html  deal.php
CS 316 Web Programming/: CS316phperror.html  CS316phperror.php  CS316phptest.php  CS316post.html  cs316cookie.html  test.php
CS 316 Web Programming/prog1/server/: nohup.out  serverstart  serverstart.c
CS 316 Web Programming/prog3/: confidence.txt  cs316program3.html  jeopardy.php  program3data.txt
CS 316 Web Programming/prog4/: build_tables.sql  drop_tables.sql
CS 316/prog2/: jeopardy.html  jeopardybugs.html
CS 316/prog3/: jeopardy.api.php  jeopardy.js
CS 316/prog4/: fill_tables.sql
CS 321 Numerical Methods/hw1/: a.out  machine_epsilon.cpp
CS 321 Numerical Methods/hw2/: a.out  newton_method.cpp
CS 441 Compilers/hw1/: hw1.cc  hw1.s  pre_vs_post.cc
CS 441 Compilers/hw3/: calc1.cpp  readme.txt
CS 441 Compilers/nursinglab/: class.aa.asm
CS 441 Compilers/nursinglab/pstack/: api.c  class.apm  ex0.z.apm  ex1.aa
CS 441 Compilers/prog1/ASU/: Makefile  README  emitter.c  global.h  lexer.c  main.c
CS 441 Compilers/prog1/flex/: a.out  lex.yy.c
CS 441 Compilers/prog2/PA2M1/: ._calc3.y  calc3.y  calc3a.c  y.tab.h
CS 441 Compilers/prog2/PA2M1_old/: ._calc3.h  Makefile  calc3.l  calc3.y  calc3a.c  cs441_calc3a  y.tab.c
CS 441/hw1/: a.out  hw1.txt
CS 441/hw3/: a.out  calc1.awk  calc1.awk.2  calc1.awk.2.low  hw3.txt  test.cpp
CS 441/nursinglab/: pstack.tar
CS 441/nursinglab/pstack/: comment  (+2 more)
CS 485 Systems Programming/lab1/: gmon.out  test
CS 485 Systems Programming/lab2/: a.out
CS 485 Systems Programming/lab3/: .swp  MySession.txt  a.out  match  match.c
CS 485 Systems Programming/proj0/: Documentation.txt  README  global.h  main.c  make-bindata  operator.c  testfile
CS 485/lab1/: callgrind.out.3685  callgrind.out.3693  mysession.txt  test.c
CS 485/lab2/: dumpd.txt  dumpt.txt  match.c  strings.txt
CS 485/lab3/: a.s
CS 485/proj0/: makefile  myfile.data  myfile.format  print.c  read_data.c  read_format.c
(+161 files in other folders)
